--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^5.0.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mariadb": "^3.4.5",
     "prisma": "^7.3.0",
     "tsx": "^4.21.0"
   }
