--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^5.2.1",
     "mariadb": "^3.4.5",
     "prisma": "^7.3.0",
-    "tsx": "^4.21.0"
+    "tsx": "^4.21.0",
+    "zod": "^4.3.5"
   }
 }
