--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "packageManager": "pnpm@10.18.1",
   "devDependencies": {
     "@types/node": "^25.0.10",
+    "@types/nodemailer": "^7.0.5",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
@@ -26,6 +27,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mariadb": "^3.4.5",
+    "nodemailer": "^7.0.12",
     "prisma": "^7.3.0",
     "tsx": "^4.21.0",
     "zod": "^4.3.5"
