--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.18.1",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/node": "^25.0.10",
     "@types/nodemailer": "^7.0.5",
     "nodemon": "^3.1.11",
@@ -24,7 +25,9 @@
     "@prisma/adapter-mariadb": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@types/express": "^5.0.6",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
+    "ethers": "^6.16.0",
     "express": "^5.2.1",
     "mariadb": "^3.4.5",
     "nodemailer": "^7.0.12",
