--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "Email service for 7Kol",
   "main": "dist/index.js",
-  "type": "module",
   "scripts": {
     "dev": "nodemon --exec tsx src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "pm2 start dist/index.js"
   },
   "keywords": [],
   "author": "Saksham Bhugra",
@@ -18,6 +17,7 @@
     "@types/node": "^25.0.10",
     "@types/nodemailer": "^7.0.5",
     "nodemon": "^3.1.11",
+    "prisma": "^7.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
@@ -32,7 +32,7 @@
     "mariadb": "^3.4.5",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
-    "prisma": "^7.3.0",
+    "pm2": "^6.0.14",
     "tsx": "^4.21.0",
     "zod": "^4.3.5"
   }
